logs/tracking/build.make.821.log.stderr
In file included from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:0:
/home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:42:112: error: expected ‘;’ at end of member declaration
     Eigen::Matrix<float,2,Eigen::Dynamic> prev_pixel_coord, cv::Mat curr, cv::Mat ref, Eigen::VectorXf& matched)
                                                                                                                ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:133:39: error: prototype for ‘Eigen::Matrix<float, 2, -1> DepthFilter::epipolarLineSearch(Eigen::Matrix4f, Eigen::Matrix<float, 2, -1>, cv::Mat, cv::Mat, Eigen::VectorXf)’ does not match any in class ‘DepthFilter’
 Eigen::Matrix<float,2,Eigen::Dynamic> DepthFilter::epipolarLineSearch(Eigen::Matrix4f T, 
                                       ^
In file included from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:0:
/home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:41:40: error: candidate is: Eigen::Matrix<float, 2, -1> DepthFilter::epipolarLineSearch(Eigen::Matrix4f, Eigen::Matrix<float, 2, -1>, cv::Mat, cv::Mat, Eigen::VectorXf&)
  Eigen::Matrix<float,2,Eigen::Dynamic> epipolarLineSearch(Eigen::Matrix4f T, 
                                        ^
make[2]: *** [CMakeFiles/tracking.dir/src/DepthFilter.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:20:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
In file included from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:23:0:
/home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h: At global scope:
/home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:42:112: error: expected ‘;’ at end of member declaration
     Eigen::Matrix<float,2,Eigen::Dynamic> prev_pixel_coord, cv::Mat curr, cv::Mat ref, Eigen::VectorXf& matched)
                                                                                                                ^
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp: In function ‘int main()’:
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp:124:21: error: ‘pixel_coord_curr’ was not declared in this scope
     for(uint i=0; i<pixel_coord_curr.cols(); i++) {
                     ^
make[2]: *** [CMakeFiles/tracking.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
